# smlnj

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  F.sml  LICENSE  NEW-ARRAYS-README.md  NOTES.md  README.md  bug-trace.txt  build-transcript.txt  build.sh  cm-diffs.txt  ip.sml  trace-build.txt  trace-cmb.txt  trace-loop.txt
doc/trunk/: configure.ac
libraries/: CMakeLists.txt
libraries/MLRISC/: CMakeLists.txt  autoload.sml  make.sml  makeall-110.0.6.sml  makeall-110.25.sml  makeall-new.sml  makeall.sml  mdl.sh
libraries/ckit/: BUGS  CMakeLists.txt  HISTORY  README
libraries/cml/: CHANGES  CMakeLists.txt  README  TODO
libraries/old-basis/: CMakeLists.txt
libraries/pgraph/: CMakeLists.txt  format.sml  gen-sml.sml  generic-ops.sml  pgraph-util.cm  pgraph.cm  pgraph.sml  reconstruct.sml  scan.sml
libraries/trace-debug-profile/: CMakeLists.txt  back-trace.cm  back-trace.sml  coverage.cm  coverage.sml  install-back-trace.sml  install-coverage.sml  plugins.cm
runtime/: CMakeLists.txt
runtime/c-libs/: c-libraries.c  clib-list.h  makefile  makefile.win32  unix-raise-syserr.c  win32-raise-syserr.c
runtime/config/: gen-common.c  gen-offsets.c  gen-posix-names.sh  gen-regmask.c  gen-sizes.c  gen-unix-signals.c  gen-unix-signals.h  gen-unix-sigtbl.c  gen-win32-signals.c  gen-win32-sigtbl.c  gen.h  unix-signals.c  unix-sigtbl.c  win32-sigtab.h
runtime/gc/: addr-hash.c  addr-hash.h  big-objects.c  blast-gc.c  blast-in.c  blast-out.c  build-literals.c  c-globals-tbl.c  call-gc.c  check-heap.c  copy-loop.h  export-heap.c  flip.c  gc-stats.c  gc-util.c  heap-in-util.c  heap-input.h  heap-out-util.c  heap.h  import-heap.c  init-gc.c  major-gc.c  makefile  makefile.win32  mem-writer.c  minor-gc.c  ml-heap-image.h  ml-objects.c  obj-info.c  old-literals.c  writer.c  writer.h
runtime/include/: asm-base.h  bibop.h  bill-os.h  bin-file.h  cache-flush.h  cntr.h  gc.h  machine-id.h  memory.h  ml-base.h  ml-globals.h  ml-limits.h  ml-objects.h  ml-osdep.h  ml-request.h  ml-signals.h  ml-state.h  ml-timer.h  ml-unixdep.h  ml-values.h  tags.h  vproc-state.h  win32-timers.h
runtime/kernel/: bill-os.c  boot.c  error.c  globals.c  load-ml.c  main.c  ml-state.c  new-boot.c  run-ml.c  standalone.c  swap-bytes.c  unix-timers.c
runtime/mach-dep/: AMD64.prim.asm  ARM64.prim.asm  arm64-macros.h  cygwin-fault.c  ml-fp.h  signal-sysdep.h  signal-util.c  unix-fault.c  unix-prof.c  unix-signal.c  win32-fault.c  win32-signal.c  win32-timers.c  x86-macros.h  x86-syntax.h
runtime/memory/: README  makefile  makefile.win32  mem-common.ins  mem-mach.c  mem-mmap.c  mem-win32.c
runtime/objs/: makefile  makefile.win32  mk.amd64-cygwin  mk.amd64-darwin  mk.amd64-freebsd  mk.amd64-linux  mk.arm64-darwin  mk.arm64-linux
smlnj-lib/: CHANGES  CMakeLists.txt  CODING-STYLE.md  TODO
smlnj-lib/Controls/: control-registry-sig.sml  control-registry.sml  control-reps.sml  control-set-sig.sml  control-set.sml  control-util-sig.sml  control-util.sml  controls-lib.cm  controls-sig.sml  controls.sml  saved-controls-lib.cm
smlnj-lib/Dev/: README
smlnj-lib/Doc/: README.md
smlnj-lib/HTML/: html-attrs-fn.sml  html-elements-fn.sml  html-gram.sml  html-lex.sml  html-lib.cm  html-sig.sml  html.sml  pr-html.sml
smlnj-lib/HTML4/: README  TODO  helper.py  html4-attr.g  html4-attr.g.sml  html4-attr.l  html4-attr.l.sml  html4-attrs.sml  html4-entities.sml  html4-lex-test-toks.sml  html4-lex-test.cm  html4-lex-test.sml  html4-lib.cm  html4-parser.sml  html4-print.sml  html4-printer.sml  html4-test.cm  html4-test.sml  html4-token-utils.sml  html4-utils.sml  html4.g  html4.g.sml  html4.l  html4.l.sml  html4.sig  html4.sml
smlnj-lib/HashCons/: hash-cons-atom.sml  hash-cons-bool.sml  hash-cons-ground-fn.sml  hash-cons-int.sml  hash-cons-lib.cm  hash-cons-map-sig.sml  hash-cons-map.sml  hash-cons-set-sig.sml  hash-cons-set.sml  hash-cons-sig.sml  hash-cons-string.sml  hash-cons-word.sml  hash-cons.sml
smlnj-lib/INet/: sock-util-sig.sml  sock-util.sml  unix-sock-util.sml
smlnj-lib/JSON/: README  errors.sml  json-buffer-printer.sml  json-decode.sml  json-lib.cm  json-lib.mlb  json-parser.sml  json-printer.sml  json-source.sml  json-stream-output.fun  json-stream-output.sig  json-stream-parser.sml  json-stream-printer.sml  json-util.sml  json.sml
smlnj-lib/NEWPP/: README.md  newpp-lib.cm
smlnj-lib/PP/: README  pp-extras-lib.cm  pp-lib.cm
smlnj-lib/PPDevice/: README.md  ansi-term-dev.sml  char-buffer-dev.sml  html3-dev.sml  make-pp-device-fn.sml  pp-device-lib.cm  pp-device-ops.sig  pp-device.sig  pp-extra-devices-lib.cm
smlnj-lib/PRETTYPRINT/: README.md
smlnj-lib/PrettyPrint/: README.md  prettyprint-lib.cm
smlnj-lib/Reactive/: README  instruction.sml  machine.sml  reactive-lib.cm  reactive-sig.sml  reactive.sml
smlnj-lib/RegExp/: README  regexp-lib.cm
smlnj-lib/SExp/: README  sexp-lib.cm  sexp-lib.mlb  sexp-parser.sml  sexp-pp.sml  sexp-printer.sml  sexp-string-util.sml  sexp-tests.cm  sexp-tests.sml  sexp-tokens.sml  sexp.lex  sexp.lex.sml  sexp.sml  test-pp.sml
smlnj-lib/UUID/: README  gen-uuid.sml  uuid-lib.cm  uuid.sml
smlnj-lib/Unix/: unix-lib.cm  unix-path-sig.sml  unix-path.sml
smlnj-lib/Util/: NEW-UTIL-NOTES  ansi-term.sml  array-qsort-fn.sml  array-qsort.sml  base64-sig.sml  base64.sml  binary-map-fn.sml  binary-set-fn.sml  bit-array-sig.sml  bit-array.sml  bsearch-fn.sml  char-map-sig.sml  char-map.sml  dynamic-array-fn.sml  dynamic-array-sig.sml  dynamic-array.sml  edit-distance.sml  fifo.sml  format-comb-sig.sml  format-comb.sml  format.sml  graph-scc-fn.sml  graph-scc-sig.sml  hash-map-fn.sml  hash-set-fn.sml  hash-string.sml  hash-table-fn.sml  hash-table-rep.sml  hash-table-sig.sml  hash-table.sml  hash.sml  hash2-table-fn.sml  hashing-sig.sml  int-binary-map.sml  int-binary-set.sml  int-hash-table.sml  int-list-map.sml  int-list-set.sml  int-redblack-map.sml  int-redblack-set.sml  (+59 more)
smlnj-lib/XML/: README  generic-xml-tree.sml  xml-lexer.lex.sml  xml-parser-fn.sml  xml-tree-fn.sml  xml-tree-sig.sml
tools/: CMakeLists.txt
(+4428 files in other folders)
